--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ embed[type="application/pdf"][src="about:blank"] { filter: invert(100%) contrast
       <h2><b>PLATAFORMA DE SERVICIOS RIPIT LIMS </b></h2>
     </div>
     <div class="col-md-3" style="height: 100%; text-align: center;">
-      <img style="height: 45%; width: auto" src="logo.png" alt="RIPIT LIMS">
+      <img style="height: 45%; width: 45%" src="logo.png" alt="RIPIT LIMS">
     </div>
   </div>
 </header>
@@ -282,10 +282,10 @@ embed[type="application/pdf"][src="about:blank"] { filter: invert(100%) contrast
       <div class="alert alert-danger" role="alert" style="text-align: center;">
     </div>
     <div style="text-align: center;">
-      <h6>Nombre: DANTE JORDAN MARCELO CONTRERAS CARRERAS</h6>
-      <h6>Rut/Pasaporte: 19.774.561-4</h6>
-      <h7>Fecha Atención: 21/09/2022</h7>
-      <h7>Nro Atención: 506367</h7>
+      <h6>Nombre: DIEGO ANDRES ESPINOZA APABLAZA</h6>
+      <h6>Rut/Pasaporte: 20.479.539-8</h6>
+      <h7>Fecha Atención: 23/09/2022</h7>
+      <h7>Nro Atención: 506335</h7>
     </div>
     <div class="row" style="margin-top: 10px;">
       <div class="col-md-3">
